[project]
name = "belljar"
version = "1.4.1"
description = "Extremely simple to use callable memoization decorator library."
readme = "README.md"
authors = [
    { name = "Wannes Vantorre", email = "vantorrewannes@gmail.com" }
]

requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["cache", "memoization", "decorator", "dill", "persistence", "hashing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "dill>=0.4.1",
    "xxhash>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/VantorreWannes/belljar/belljar"
Repository = "https://github.com/VantorreWannes/belljar/belljar"
Issues = "https://github.com/VantorreWannes/belljar/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
